--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <head>
 	<html lang="en">
-	<title>Liam Cristello</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  	<title>Liam Cristello</title>
+  	<meta charset="UTF-8">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css%22%3E">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js%22%3E"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js%22%3E"> </script>
 </head>
 <body class="w3-light-grey">
-
 	<!-- Sidebar/menu -->
 	<nav class="w3-sidebar w3-bar-block w3-black w3-animate-right w3-top w3-text-light-grey w3-large" style="z-index:3;width:250px;font-weight:bold;display:none;right:0;" id="mySidebar">
 	  <a href="javascript:void()" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">CLOSE SIDEBAR</a> 
@@ -33,33 +35,27 @@
 	  
 	  <!-- Photo grid -->
 	  <div class="w3-row w3-grayscale-min">
-	    <div class="w3-quarter">
-	      <img src="/w3images/girl.jpg" style="width:100%" onclick="onClick(this)" alt="Image 1">
-	      <img src="/w3images/boy.jpg" style="width:100%" onclick="onClick(this)" alt="Image 5">
-	      <img src="/w3images/girl.jpg" style="width:100%" onclick="onClick(this)" alt="Image 9">
+	    <div class="w3-third">
+	      <img src="Images/SleepyJeoffLogo.png" style="width:100%" onclick="onClick(this)" alt="Image 1">
+	      <img src="Images/BirdBrigadeLogo.png" style="width:100%" onclick="onClick(this)" alt="Image 4">
+	      <img src="Images/SleepyJeoffLogo.png" style="width:100%" onclick="onClick(this)" alt="Image 7">
 	   </div>
 	    
-	   <div class="w3-quarter">
-	      <img src="/w3images/girl_train.jpg" style="width:100%" onclick="onClick(this)" alt="Image 2">
-	      <img src="/w3images/man_bench.jpg" style="width:100%" onclick="onClick(this)" alt="Image 6">
-	      <img src="/w3images/natureboy.jpg" style="width:100%" onclick="onClick(this)" alt="Image 10">
+	   <div class="w3-third">
+	      <img src="Images/SleepyJeoffLogo.png" style="width:100%" onclick="onClick(this)" alt="Image 2">
+	      <img src="Images/BirdBrigadeLogo.png" style="width:100%" onclick="onClick(this)" alt="Image 5">
+	      <img src="Images/SleepyJeoffLogo.png" style="width:100%" onclick="onClick(this)" alt="Image 8">
 	    </div>
 	    
-	    <div class="w3-quarter">
-	      <img src="/w3images/man_bench.jpg" style="width:100%" onclick="onClick(this)" alt="Image 3">
-	      <img src="/w3images/girl_mountain.jpg" style="width:100%" onclick="onClick(this)" alt="Image 7">
-	      <img src="/w3images/closegirl.jpg" style="width:100%" onclick="onClick(this)" alt="Image 11">
-	    </div>
-
-	    <div class="w3-quarter">
-	      <img src="/w3images/natureboy.jpg" style="width:100%" onclick="onClick(this)" alt="Image 4">
-	      <img src="/w3images/girl_train.jpg" style="width:100%" onclick="onClick(this)" alt="Image 8">
-	      <img src="/w3images/boy.jpg" style="width:100%" onclick="onClick(this)" alt="Image 12">
+	    <div class="w3-third">
+	      <img src="Images/SleepyJeoffLogo.png" style="width:100%" onclick="onClick(this)" alt="Image 3">
+	      <img src="Images/BirdBrigadeLogo.png" style="width:100%" onclick="onClick(this)" alt="Image 6">
+	      <img src="Images/SleepyJeoffLogo.png" style="width:100%" onclick="onClick(this)" alt="Image 9">
 	    </div>
 	  </div>
 
 	  <!-- Pagination -->
-	  <div class="w3-center w3-padding-32">
+	  <!--<div class="w3-center w3-padding-32">
 	    <div class="w3-bar">
 	      <a href="#" class="w3-bar-item w3-button w3-hover-black">«</a>
 	      <a href="#" class="w3-bar-item w3-black w3-button">1</a>
@@ -68,7 +64,7 @@
 	      <a href="#" class="w3-bar-item w3-button w3-hover-black">4</a>
 	      <a href="#" class="w3-bar-item w3-button w3-hover-black">»</a>
 	    </div>
-	  </div>
+	  </div>-->
 	  
 	  <!-- Modal for full size images on click-->
 	  <div id="modal01" class="w3-modal w3-black" style="padding-top:0" onclick="this.style.display='none'">
