--- a/about.html
+++ b/about.html
@@ -32,13 +32,15 @@
 
   <!-- About section -->
   <div class="w3-main w3-content" style="max-width:1600px;margin-top:84px">
-  <div class="w3-container w3-light-blue w3-center w3-margin-top w3-text-dark-grey w3-padding-32" id="about">
+  <div class="w3-container w3-center w3-margin-top w3-text-dark-grey w3-padding-32" id="about">
     <h4 class="about-heading"><b>About Me</b></h4>
-    <img style="display: block; padding-left: 40px" src="Images/Liam.png" alt="Me" class="w3-image w3-half w3-padding-32" width="55%" height="55%">
+    <img style="display: block" src="Images/Liam.png" alt="Me" class="w3-image w3-half w3-center w3-padding-32" width="55%" height="55%">
     <div class="w3-content w3-half w3-justify w3-padding-64" style="max-width:1000px; margin: auto">
-      <h1 style="padding-left: 40px"> Hi there!</h1>
-      <p class="about1">My name's Liam. I'm currently studying as a Computer Science & Game Development major at Northeastern University. I'm studying to make video games, and you can find some of my projects on the portfolio page of this website! Some were made as coursework projects, and others were made as side projects in my free time. I've worked the most with Unity3D, but haave also done some work with Unreal Engine 4. I like music and audio engineering sometimes. Here's some more stuff to take up space and make me look better. I promise I will change this soon. :)))
+      <h1 class="w3-center"> Hi there!</h1>
+      <p class="about1">My name's Liam. I'm currently studying as a Computer Science & Game Development major at Northeastern University. I'm studying to make video games, and you can find some of my projects on the portfolio page of this website! Some were made as coursework projects, and others were made as side projects in my free time.
       </p>
+      <p class="about1">I've worked the most with Unity3D, but have also done some work with Unreal Engine 4.</p>
+      <p class="about1">I like music and audio engineering sometimes. Here's some more stuff to take up space and make me look better. I promise I will change this soon. :)))</p>
     </div>
   </div> 
   </div>
@@ -55,15 +57,6 @@
     document.getElementById("mySidebar").style.display = "none";
     document.getElementById("myOverlay").style.display = "none";
   }
-
-  // Modal Image Gallery
-  function onClick(element) {
-    document.getElementById("img01").src = element.src;
-    document.getElementById("modal01").style.display = "block";
-    var captionText = document.getElementById("caption");
-    captionText.innerHTML = element.alt;
-  }
-
   </script>
 </body>
 </html>
