--- a/resume.html
+++ b/resume.html
@@ -37,9 +37,15 @@
 			<h1 style = "text-align: center">Click here to download!</h1>
 		</a>
 
-		<div class="w3-center">
+		<!--<div class="w3-center">
 			<embed src="PDF/Liam_Cristello_Resume.pdf" width="1200px" height="800px"./>
-		</div>
+		</div>-->
+
+		<!-- PDF Viewer -->
+	    <object data="PDF/Liam_Cristello_Resume.pdf" type="application/pdf" width="100%" height="600px">
+	    	<!-- Google PDF Viewer for Google Chrome on Android -->
+	      	<iframe src="https://github.com/liamcristello/liamcristello.github.io/blob/master/PDF/Liam_Cristello_Resume.pdf&embedded=true" frameborder="0" width="100%" height="100%"></iframe>
+	    </object>
 
 		<footer class="w3-container w3-center">
 
