--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,7 @@
 		</div>-->
 
 		<!-- PDF Viewer -->
-	    <object data="PDF/Liam_Cristello_Resume.pdf" type="application/pdf" width="80%" height="80%">
+	    <object data="PDF/Liam_Cristello_Resume.pdf#zoom=80%" type="application/pdf" width="100%" height="600px">
 	    	<!-- Google PDF Viewer for Google Chrome on Android -->
 	      	<iframe src="https://github.com/liamcristello/liamcristello.github.io/blob/master/PDF/Liam_Cristello_Resume.pdf&embedded=true" frameborder="0" width="100%" height="100%"></iframe>
 	    </object>
